Se puso la url de google el linea 31.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="about-me">
     <div class="container">
       <h3 class="text-center">About me</h3>
-      <p class="biografia"><img src="img/miki.jpg"> "Si no lo puedes explicar con simplicidad, es que no lo entiendes bien."</br> "<a href="#">Google</a> tiene la funcionalidad de una navaja suiza muy complicada, pero la página principal es nuestra forma de acercarnos cuando está cerrada. Es simple, elegante, puedes guardarla en tu bolsillo, pero tiene esos grandiosos trucos cuando los necesitas."
+      <p class="biografia"><img src="img/miki.jpg"> "Si no lo puedes explicar con simplicidad, es que no lo entiendes bien."</br> "<a href="https://www.google.com.pe/webhp?hl=es">Google</a> tiene la funcionalidad de una navaja suiza muy complicada, pero la página principal es nuestra forma de acercarnos cuando está cerrada. Es simple, elegante, puedes guardarla en tu bolsillo, pero tiene esos grandiosos trucos cuando los necesitas."
       </p>       
     </div>
   </div>
